# fastapi-template-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  gitlab-ci.yml  mypy.ini  pyproject.toml
cli/: get_project_version.sh  run.sh  set_project_name.sh
config/: .env.dist  .env.example  .test.env.dist  .test.env.example
docker/: Dockerfile  docker-compose-ci.yaml  docker-compose-ci.yml  docker-compose.yaml  docker-compose.yml
docs/: ARCHITECTURE.MD  DATABASE.MD  DOCKER.MD  GITLAB-CI.MD  PROXY.md  README.md
src/: config.py  logger.py  main.py
src/api/: app.py
src/api/dependencies/: db.py
src/app/: db.py  setup.py
src/infra/: db.py  logger.py  redis.py
src/infra/config/: __init__.py  config.py  enums.py
src/infra/db/: base.py  engine.py
src/infra/redis/: exceptions.py  manager.py
src/persistence/: utils.py
src/persistence/mappers/: base.py
src/persistence/migrations/: env.py  script.py.mako
src/persistence/repositories/: base.py
src/presentation/api/v1/: main.py
src/presentation/api/v1/dependencies/: db.py
tests/: conftest.py
tests/test_presentation/api/v1/: conftest.py
tests/unit/test_presentation/api/v1/: base_test.py
